--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,13 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6 {
 	font-weight: 300;
 }
 
+#head_banner{
+	background-size: cover;
+	background-image: url(../img/head.jpg);
+	background-position: center center;
+	height: 35vh;
+}
+
 /* mobile menu
  **************************************************/
 .mobilemenu {
@@ -82,22 +89,6 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6 {
 	width: 100%;
 }
 
-#overlay {
-	position: absolute;
-	top: 0;
-	left: 0px;
-	bottom: 0;
-	right: 0px;
-	background-color: #000;
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=25)";
-	filter: alpha(opacity=25);
-	opacity: 0.25;
-	display: none;
-	z-index: 300;
-	cursor: crosshair;
-	cursor: url(../img/pointer.png), auto;
-}
-
 #runner {
 	position: absolute;
 	width: 30px;
@@ -128,7 +119,7 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6 {
 }
 
 #profile .portrate {
-	background-image: url(../img/personal/lixia-yao.png);
+	background-image: url(../img/mayo.png);
 	width: 125px;
 	margin: 0 auto;
 	height: 125px;
@@ -699,7 +690,7 @@ ul.ul-dates div.content p,ul.ul-dates-gray div.content p {
 
 	-webkit-box-shadow: 0px 3px 3px -3px #ccc;
 	box-shadow: 0px 3px 3px -3px #ccc;
-	cursor: pointer;
+	/*cursor: pointer;*/
 }
 
 .pitems .pubtitle {
