--- a/css/yaolab.css
+++ b/css/yaolab.css
@@ -1,7 +1,7 @@
 html, body{
     font-family: 'Lato', sans-serif;
     font-weight: 300;
-    font-size: 16px;
+    font-size: 19px;
     line-height: 1.7;
     background-color: #eeefe9;
 }
@@ -88,15 +88,16 @@ img{
     color: #f1f1f1;
     width: 100%;
     transition: .5s ease;
-    opacity:0;
     color: white;
     font-size: 20px;
     padding: 20px;
     text-align: center;
 }
 
-/* When you mouse over the container, fade in the overlay title */
-.card:hover .myoverlay,
+.carousel-item .myoverlay{
+    opacity:0;
+}
+
 .carousel-item:hover .myoverlay {
     opacity: 1;
 }
@@ -143,7 +144,7 @@ img{
     font-size: 10px;
     border: none;
     outline: none;
-    background-color: #15204d;
+    background-color: #212529;
     color: white;
     cursor: pointer;
     padding: 15px;
