--- a/css/yaolab.css
+++ b/css/yaolab.css
@@ -1,5 +1,5 @@
 html, body{
-    font-family: 'Lato', sans-serif;
+    /*font-family: 'Lato', sans-serif;*/
     /*font-weight: 300;*/
     /*font-size: 19px;*/
     /*line-height: 1.7;*/
